# Ambience-AI-1.5

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINALIZATION_PLAN.md  FINALIZATION_PLAN_RAG_UPDATES.md  README.md  README.txt  README_Cloud_Hosting_Daniel.md  README_Daniel  backend_sse_probe.txt  docker-compose.yml  rename_backend.sh  requirements.txt  revision_sse_probe.txt  sample_review.txt  setup_db.py  test-plan.md  verify_db.py
app/: main.py
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260316_0001_initial_schema.py  20260316_0002_add_performance_indexes.py  20260316_0003_add_user_session_version.py  20260321_0004_add_auth_verification_schema.py  20260321_0005_fix_nullable_foreign_keys.py  20260322_0006_add_composite_query_indexes.py  20260322_0007_enforce_non_nullable_defaults.py  20260323_0008_add_message_is_error.py  20260327_0009_replace_is_archived_with_archived_status.py  39038320b4c5_initial_schema.py  a8d9c6b2f1e4_backend_schema_baseline.py
backend/app/: Dockerfile  main.py
backend/app/api/: auth.py  rag.py
backend/app/db/: __init__.py  utils.py
backend/src/: main.py
backend/src/api/: admin.py  auth.py  chats.py  deps.py  health.py  notifications.py  rag.py  router.py  specialist.py
backend/src/app/: main.py
backend/src/core/: chat_policy.py  config.py  rate_limit.py  security.py
backend/src/db/: __init__.py  base.py  bootstrap.py  email_verification_models.py  models.py  password_reset_models.py  session.py  utils.py
backend/src/repositories/: audit_repository.py  chat_repository.py  email_verification_repository.py  message_repository.py  notification_repository.py  password_reset_repository.py  user_repository.py
backend/src/schemas/: admin.py  auth.py  chat.py  notification.py
backend/src/scripts/: migrate_message_review_fields.sql  seed_demo_consultations.py
backend/src/services/: _mappers.py  admin_service.py  auth_service.py  cache_invalidation.py  chat_service.py  chat_uploads.py  email_service.py  model_router.py  notification_service.py  rag_client.py  rag_context.py  specialist_queries.py  specialist_review.py  specialist_service.py  specialist_shared.py
backend/src/utils/: cache.py  sse.py
backend/tests/: conftest.py  test_admin.py  test_admin_guidelines.py  test_admin_stats.py  test_auth.py  test_auth_profile.py  test_cache_behavior.py  test_cache_disabled.py  test_cache_error_paths.py  test_cache_keys.py  test_cache_module.py  test_cache_sync_wrappers.py  test_chat_policy.py  test_chats.py  test_chats_extra.py  test_email_verification_flow.py  test_extract_text.py  test_file_context_rag.py  test_file_upload.py  test_notifications.py  test_password_reset_flow.py  test_password_strength.py  test_patient_context.py  test_rag_audit.py  test_security.py  test_specialist.py  test_streaming.py
backend/tests/api/: test_admin.py  test_admin_guidelines.py  test_admin_stats.py  test_auth.py  test_auth_profile.py  test_auth_verification_status.py  test_chats.py  test_chats_extra.py  test_file_upload.py  test_infra.py  test_notifications.py  test_rag_audit.py
backend/tests/core/: test_chat_policy.py  test_logging.py  test_password_strength.py  test_security.py  test_security_extra.py
backend/tests/db/: test_session_and_bootstrap.py
backend/tests/integration/: test_workflows.py
backend/tests/repositories/: test_password_reset_repository.py  test_repository_edges.py
backend/tests/services/: test_admin_service_unit.py  test_auth_service_unit.py  test_chat_service_unit.py  test_email_service_unit.py  test_extract_text.py  test_file_context_rag.py  test_patient_context.py  test_rag_client.py  test_specialist.py  test_specialist_service_unit.py  test_upload_validation_unit.py
backend/tests/utils/: test_cache_behavior.py  test_cache_disabled.py  test_cache_error_paths.py  test_cache_keys.py  test_cache_logging.py  test_cache_module.py  test_cache_patterns.py  test_cache_payloads.py  test_cache_sync_wrappers.py  test_sse_extra.py  test_streaming.py
rag-project/: .gitignore  Makefile  pyproject.toml  requirements.txt
rag-project/scripts/: init_db.sql
rag-project/serve/: status.sh
rag-project/src/: config.py  embed.py  extract.py
rag-project/src/ingestion/: extract.py
rag-project/src/utils/: db.py  logger.py
rag_service/: .coverage 2  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MAINTENANCE_BACKLOG.md  Makefile  README.md  TASKS.md  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt
rag_service/.github/workflows/: ci.yml
rag_service/configs/: ingestion.yaml  nice_guideline_map.yaml  sources.yaml
rag_service/scripts/: init_db.sql  run_retry_worker.py  verify_nltk.py
rag_service/scripts/migrations/: 001_create_rag_chunks.sql  002_indexes.sql
rag_service/scripts/setup/: verify_nltk.py
rag_service/scripts/workers/: run_retry_worker.py
rag_service/src/: Dockerfile  chunk.py  config.py  ingest.py  main.py  requirements.txt  retry_queue.py
rag_service/src/api/: app.py  ask_routes.py  ask_schemas.py  canonicalization.py  citations.py  dependencies.py  routes.py  schemas.py  security.py  services.py  startup.py  streaming.py
rag_service/src/clinical_api/: __init__.py  schemas.py  services.py
rag_service/src/config/: __init__.py  base.py  llm.py  runtime.py  storage.py
rag_service/src/generation/: client.py  prompts.py  router.py  streaming.py
rag_service/src/ingestion/: chunk.py  clean.py  cli.py  embed.py  extract.py  fusion.py  ingest.py  metadata.py  nice_updates.py  pipeline.py  section_detect.py  store.py  table_detect.py  web_scheduler.py  web_sources.py  web_sync.py
rag_service/src/jobs/: __init__.py  responses.py  retry.py  state.py
rag_service/src/llm/: client.py  prompts.py
rag_service/src/orchestration/: __init__.py  generate.py  pipeline.py  prompt.py
rag_service/tests/: test_config.py  test_main.py  test_main_helpers.py  test_retry_queue.py  test_retry_worker.py  test_streaming.py
(+371 files in other folders)
