[project]
name = "rag_service"
version = "0.1.0"
description = "RAG application with pgvector and sentence-transformers"
requires-python = ">=3.10"
dependencies = [
    # Document Loading
    "pymupdf==1.24.10",          # PDF extraction
    "markdown>=3.5",             # Markdown files

    # Text Processing & Chunking
    "langchain-text-splitters>=0.2.2",  # Text chunking
    "tiktoken>=0.5.0",                  # Token counting
    "nltk>=3.8.0",                      # Sentence splitting

    # Embeddings & ML
    "sentence-transformers==3.0.1",     # Embeddings
    "torch>=2.1.0",                     # PyTorch
    "numpy>=1.26.0",                    # Numpy

    # Vector Stores
    "pgvector>=0.2.4",                  # pgvector support

    # Database
    "psycopg2-binary>=2.9.9",           # PostgreSQL
    "sqlalchemy>=2.0.0",                # SQLAlchemy ORM
    "alembic>=1.13.0",                  # Database migrations

    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.1",             # .env files
    "tqdm>=4.66.0",                     # Progress bars
    "pyyaml>=6.0.0",                    # for configs/ingestion.yaml and configs/sources.yaml
    "click>=8.1.0",                     # for CLI

    # API & HTTP
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.13",
    "redis>=5.0.0",
    "rq>=1.16.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",      # async test support for FastAPI

    # Code Quality
    "ruff>=0.5.0",
    "mypy>=1.7.0",

    # Type stubs
    "types-tqdm>=4.66.0",
    "types-psycopg2>=2.9.0",
    "types-PyYAML>=6.0.0",
    "types-Markdown>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Ruff - linter
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules (catches real bugs)
    "SIM",  # flake8-simplify (cleaner code patterns)
    "T20",  # flake8-print (catch stray print() calls)
    "PT",   # flake8-pytest-style (consistent test patterns)
]
ignore = [
    "B008",   # FastAPI uses Depends() as default arg — this is intentional
    "SIM108", # ternary operator enforcement is too aggressive
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Ruff formatter settings (replaces Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy - type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true         # catches stale # type: ignore comments
disallow_untyped_defs = true
check_untyped_defs = true          # also checks bodies of unannotated functions
ignore_missing_imports = true
follow_imports = "silent"          # don't recurse into imported packages
exclude = [
    "\\.venv",
    "venv",
    "build",
    "dist",
]

# Skip heavy ML/data libs — no stubs, mypy hangs trying to parse them.
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "sentence_transformers.*",
    "nltk.*",
    "pgvector.*",
    "rq.*",
    "alembic.*",
    "fitz.*",
    "tiktoken.*",
    "langchain_text_splitters.*",
]
ignore_errors = true
follow_imports = "skip"

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"              # needed for any async FastAPI tests
addopts = "-p no:langsmith --tb=short"

# Coverage
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 100                  # enforce 100% coverage target
show_missing = true                # prints uncovered line numbers in terminal
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]